# currency_exchange

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  currencies.sql  docker-compose.yaml  entrypoint.sh  exchange_rates.sql  pyproject.toml
src/currency_exchange/: main.py
src/currency_exchange/api/: currency_handler.py  exchange_handler.py  ischemas.py  schemas.py
src/currency_exchange/api/responses/: currency_responses.py  exchange_resposes.py
src/currency_exchange/api/routers/: currency.py  exchange.py
src/currency_exchange/api/schemas/: currency_schemas.py  exchange_schemas.py
src/currency_exchange/app/: app_server.py
src/currency_exchange/core/: conteiner.py
src/currency_exchange/core/configs/: __init__.py  settings_alembiv.py  settings_app.py  settings_common.py  settings_database.py  settings_redis.py
src/currency_exchange/core/logging/: logger_setup.py
src/currency_exchange/domain/entity/: base.py  currency.py  exceptions.py  exchange.py  use_cases.py
src/currency_exchange/logs/: fastapi-logs.log.2024-11-05  fastapi-logs.log.2024-11-06  fastapi-logs.log.2024-11-09  fastapi-logs.log.2024-11-11  fastapi-logs.log.2024-11-19  fastapi-logs.log.2024-11-20  fastapi-logs.log.2024-11-21  fastapi-logs.log.2024-11-22
src/currency_exchange/services/: base_api_service.py  currency_api_service.py  exchange_api_sevice.py
src/currency_exchange/services/api_services/: base_api_service.py  currency_api_service.py  exchange_api_sevice.py
src/frontend/: Dockerfile
src/frontend/components/: ExchangeRates.jsx
src/frontend/src/: App.jsx  main.jsx
(+8 files in other folders)
