[tool.poetry]
name = "currency-exchange"
version = "0.1.0"
description = ""
authors = ["Alex Kor <dna1133@gmail.com>"]
readme = "README.md"
packages = [{include = "currency_exchange", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
setuptools = "^75.3.0"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
fastapi-cache = "^0.1.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
punq = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start_app = "src.currency_exchange.main:start_app"